--- a/src/main/resources/static/css/pyr_add_product.css
+++ b/src/main/resources/static/css/pyr_add_product.css
@@ -14,7 +14,7 @@
 
 a {
     text-decoration: none;
-/*     color: black; */
+    color: inherit;
 }
 
 /* 유효성 검사 조건 불충족 시 에러 메세지  */
@@ -269,13 +269,14 @@ a {
 /* 버튼 스타일 */
 #Product-registration button {
     /* padding: 10px 20px; */
-    background-color: #e40000d3;
-    color: #fff;
-    font-size: 18px;
+    background-color: var(--main-color);
+    font-size: 16px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 #Product-registration #addProductReset {
@@ -287,7 +288,7 @@ a {
 }
 
 #Product-registration button:hover {
-    background-color: #e400008e;
+    background-color: #cc0000;
 }
 
 #addResetBtn {
@@ -323,15 +324,18 @@ a {
     width: 300px;
     height: 40px;
     margin-top: 10px;
-    background-color: #e40000d3;
-    border-radius: 10px;
+    background-color: var(--main-color);
+    border-radius: 4px;
     color: white;
     cursor: pointer;
     border: none;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #prListEdit #prListEditBtn:hover {
-    background-color: #e400008e;
+    background-color: #cc0000;
 }
 
 /* 상품리스트 h2 */
@@ -649,18 +653,19 @@ a {
 .Product_contents .editProduct {
     padding: 10px 20px;
     margin-top: 10px;
-    background-color: #f11d1dd3;
-    color: #fff;
+    background-color:  var(--main-color);
+    color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
     width: 45%;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .Product_contents .editProduct:hover {
-    background-color: #ff4747d3;
-    transition: background-color 0.3s ease;
+    background-color: #cc0000;
 }
 
 .Product_contents .deleteProduct {
@@ -673,6 +678,9 @@ a {
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 45%;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .Product_contents .deleteProduct:hover {
