--- a/src/main/resources/static/css/pyr_my_productlist.css
+++ b/src/main/resources/static/css/pyr_my_productlist.css
@@ -81,6 +81,7 @@
 .right .partner_comment {
 	padding: 15px 26px 20px;
 	background: rgb(250, 250, 250);
+	overflow-wrap: break-word;
 }
 
 .partner_comment p {
@@ -111,18 +112,27 @@
 	height: 40px;
 	margin-top: 10px;
 	margin-left: 650px;
-	background-color: #e40000d3;
+	background-color: var(--main-color);
 	transition: opacity 0.4s ease-in-out;
-	border-radius: 10px;
-	color: white;
+	border-radius: 4px;
+	color: #fff;
 	cursor: pointer;
 	transition: opacity 0.4s ease-in-out;
 	border: none;
+	font-size: 15px;
+    font-weight: bold;
+    border: none;
 }
 
 #pdShowAddRoonBtn:hover {
-	background-color: #e400008e;
 	transition: opacity 0.4s ease-in-out;
+	border-radius: 4px;
+    color: #fff;
+    border: none;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: #cc0000;
 }
 
 /*productContent CSS  */
