--- a/src/main/resources/static/css/pyr_registerRoom.css
+++ b/src/main/resources/static/css/pyr_registerRoom.css
@@ -69,6 +69,7 @@
 .right .partner_comment {
 	padding: 15px 26px 20px;
 	background: rgb(250, 250, 250);
+	overflow-wrap: break-word;
 }
 
 .partner_comment p{
@@ -87,16 +88,19 @@
 	margin-top: 10px;
 	margin-left: 30px;
 	margin-right: 10px;
-	background-color: rgb(255, 64, 64);
+	background-color: var(--main-color);
 	transition: opacity 0.4s ease-in-out;
-	border-radius: 10px;
+	border-radius: 4px;
 	color: white;
 	cursor: pointer;
 	border: none;
+	text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #pdMainEditBtn:hover {
-	background-color: #e400008e;
+	background-color: #cc0000;
 	transition: opacity 0.4s ease-in-out;
 }
 
@@ -106,10 +110,13 @@
 	margin-top: 10px;
 	background-color: #c3b3b3d3;
 	transition: opacity 0.4s ease-in-out;
-	border-radius: 10px;
+	border-radius: 4px;
 	color: white;
 	cursor: pointer;
 	border: none;
+	text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #deleateAccBtn:hover {
@@ -184,17 +191,20 @@
 	width: 280px;
 	height: 40px;
 	margin-top: 10px;
-	background-color: rgb(255, 64, 64);
+	background-color: var(--main-color);
 	transition: opacity 0.4s ease-in-out;
-	border-radius: 10px;
+	border-radius: 4px;
 	color: white;
 	cursor: pointer;
 	transition: opacity 0.4s ease-in-out;
 	border: none;
+	text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #prListEdit #prListEditBtn:hover {
-	background-color: #e400008e;
+	background-color: #cc0000;
 	transition: opacity 0.4s ease-in-out;
 }
 
