--- a/src/main/resources/static/css/result_partner_kty.css
+++ b/src/main/resources/static/css/result_partner_kty.css
@@ -10,17 +10,19 @@ td, th {
 .addProductBtn {
 	margin-top: 2px;
 	padding: 4px;
-	background-color: #938e8e;
+	background-color: var(--main-color);
 	color: #fff;
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
-	transition: background-color 0.3s ease;
-	padding: 4px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .addProductBtn:hover {
-	background-color: #c3c0c0;
+	background-color: #cc0000;
+	cursor: pointer;
 }
 
 .pagination-horizontal {
