--- a/src/main/resources/templates/pyr/productMainReg.html
+++ b/src/main/resources/templates/pyr/productMainReg.html
@@ -16,70 +16,72 @@
 	<body>
 
 		<div id="addMainPdregistration">
-			<h1>숙박업소 등록</h1>
+  				<h1>내 상품 수정</h1>
 
 			<form id="productForm">
-				<div id="namdAddrSecFlex">
-					<div id="nameAndAddr">
-
-						<input type="hidden" th:name="acc_id"
-							th:value="${accommodation?.id ?: ''}">
-						<div class="acc_name_fild">
-							<label for="acc_name">숙소 이름 : </label> <input type="text"
-								id="acc_name" name="acc_name"
-								th:value="${accommodation?.acc_name ?: ''}" readonly>
-						</div>
-						<div class="acc_addr_fild">
-							<label for="acc_address">숙소 주소 : </label> <input type="text"
-								id="acc_address" name="acc_address"
-								th:value="${accommodation?.acc_address ?: ''}" readonly>
-						</div>
-
-						<div class="acc_max_peop_field">
-							<label for="acc_max_people">최대 인원 : </label> <input type="number"
-								id="acc_max_people" name="acc_max_people"
-								th:value="${accommodation?.acc_max_people ?: ''}">
-						</div>
-					</div>
-
-
-					<div id="sectors">
-						<label for="acc_sectors">숙박 업종</label> <input type="text"
-							id="partner_sectors" name="acc_sectors"
-							th:value="${accommodation.acc_sectors}" readonly />
-					</div>
-
-				</div>
 
 				<div id="main_img_area">
 					<div id="imgFileArea">
 						<div id="showImg">
+							<h3 class="productImg"><span style="font-weight: bold; color: orangered;">*</span>업소 사진</h3>
 							<img
 								th:src="${accommodation?.acc_img ?: '/img/acc_img/no_photo.png'}"
 								alt="Main Image" width="100%" height="100%" class="main_img"
 								id="mainImgView">
 						</div>
-						<div id="fileArea">
-							<label id="roomPhotos">
-								<h3>업소 사진</h3> <input type="file" name="acc_img"
-								id="addMainPhoto">
-							</label>
-						</div>
 					</div>
 
+				</div>
+
+				<div id="namdAddrSecFlex">
+					<div id="nameAndAddr">
+						<h4 class="h4Message"><span style="font-weight: bold; color: orangered;">*</span>이 항목만 수정이 가능합니다.</h4>
+						<input type="hidden" th:name="acc_id"
+							th:value="${accommodation?.id ?: ''}">
+						<div class="acc_name_fild">
+							<label class="acc_name1" for="acc_name">숙소 이름 : </label> <input type="text"
+								id="acc_name" name="acc_name"
+								th:value="${accommodation?.acc_name ?: ''}" readonly>
+						</div>
+						<div class="acc_addr_fild">
+							<label class="acc_address1" for="acc_address">숙소 주소 : </label> <input type="text"
+								id="acc_address" name="acc_address"
+								th:value="${accommodation?.acc_address ?: ''}" readonly>
+						</div>
+						
+						<div id="sectors">
+						<label class="acc_sectors2" for="acc_sectors">숙박 업종 : </label> <input type="text"
+							id="partner_sectors" name="acc_sectors"
+							th:value="${accommodation.acc_sectors}" readonly />
+					</div>
+
+						<div class="acc_max_peop_field">
+							<label class="acc_max_people2" for="acc_max_people"><span style="font-weight: bold; color: orangered;">*</span>최대 인원 : </label> <input type="number"
+								id="acc_max_people" name="acc_max_people"
+								th:value="${accommodation?.acc_max_people ?: ''}">
+						</div>
+						<label id="roomPhotos">
+								 <input type="file" name="acc_img"
+								id="addMainPhoto">
+							</label>
+					</div>
+
+
+
+				</div>
+
 					<label id="mainPrCom">
-						<hr>
-						<h3>사장님 한마디</h3> <textarea type="text"
+						<h3><span style="font-weight: bold; color: orangered;">*</span>사장님 한마디</h3> <textarea type="text"
 							placeholder="업소에 대한 간략한 설명을 작성해 주세요" minlength="10"
 							maxlength="80" required name="acc_explain"
 							th:text="${accommodation?.acc_explain ?: ''}" id="acc_explain"></textarea>
 					</label>
-				</div>
 				<br>
 
 				<div id="accInfoArea">
-					<h3 style="margin-bottom: 10px; margin-top: 20px;">숙소 정보</h3>
+					<h3><span style="font-weight: bold; color: orangered;">*</span>숙소 정보</h3>
 					<div style="width: 600px; resize: none;">
+						<!-- Add an ID to the textarea for the Markdown editor -->
 						<textarea rows="" cols="" type="text" required name="acc_info"
 							id="acc_info" th:text="${accommodation?.acc_info ?: ''}"
 							placeholder="숙소에 대한 상세설명을 등록해 주세요. ex)공지사항, 기본정보, 취소 및 환불규정..."></textarea>
@@ -95,6 +97,11 @@
 
 
 		</div>
+		<!-- <script>
+			var simplemde = new SimpleMDE({
+				element : document.getElementById("acc_info"),
+			});
+		</script> -->
 		<script src="/js/pyr_productMainReg.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.6/dist/sweetalert2.all.min.js"></script>
