--- a/src/main/resources/static/css/my_booking.css
+++ b/src/main/resources/static/css/my_booking.css
@@ -307,3 +307,16 @@ color:grey;
 .gray-button {
   filter: grayscale(100%);
 }
+
+#del {
+	position: relative;
+	top : 0;
+	left: 0px;
+	display : inline-block;
+	cursor : pointer;
+	height: 10px;
+}
+
+#del:hover {
+	color: red;
+}
