--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -40,6 +40,7 @@
 	</nav>
 	<div id="wrap">
 		<div id="container" th:each="book : ${bookList} ">
+				
 			   <div id="left">
 				<!-- <img th:src="${book.productImg}" 
 								alt="Product Image" width="100%"
@@ -93,8 +94,8 @@
 				</p>
 				
 			
-
 			</div>
+			<span><span id="del" th:onclick="|location.href='/user/mypage/my_booking_del/${book.bookNum}'|">&#215;</span></span>
 		</div> <!--  영역끝 -->
 
 		
