--- a/src/main/resources/static/css/my_inquiry.css
+++ b/src/main/resources/static/css/my_inquiry.css
@@ -154,7 +154,7 @@
  p{
 	 background-color: #f2f2f2;
 	 margin : 0px;
-	 padding: 10px 15px;
+	 padding: 20px;
 	 white-space: pre-line;
 	 border-radius: 7px;
 }
